# MOBILE-ROBOTICS

./: README.md  life_saver
autonomous_explore/: CMakeLists.txt  package.xml
autonomous_explore/include/autonomous_explore/: UnicycleAutonome.hpp
autonomous_explore/map/: exploring_map.yaml
autonomous_explore/src/: UnicycleAutonome.cpp  cmd_auto.cpp  explore.cpp  save_map_in_pgm.cpp
minilab_model/urdf/: minilab_equiped.urdf
minilab_simulation/launch/: gmapping_with_camera.launch  minilab_gazebo.launch  minilab_simulation.launch
minilab_simulation/map/: buvette.yaml  salle.yaml
my_map_processing/: CMakeLists.txt  package.xml
my_map_processing/include/my_map_processing/: Divide.hpp  Subcell.hpp
my_map_processing/launch/: all_in.launch  map_processing.launch
my_map_processing/src/: Divide.cpp  map_process.cpp
my_teleop/: CMakeLists.txt  package.xml
my_teleop/launch/: command_joystick.launch  keyboard.launch  turtlesim_launch.launch
my_teleop/scripts/: command.py  teleop_keyboard.py
path_planning_map/: CMakeLists.txt  package.xml
path_planning_map/config/: config.yaml
path_planning_map/config/rviz/: path_map_visu.rviz  pionner_visu.rviz
path_planning_map/images_map/: test.png.yaml
path_planning_map/include/path_planning_map/: Dijsktra.hpp  Divide.hpp  Subcell.hpp  occupancy_grid_loader.hpp
path_planning_map/launch/: all_in.launch  minilab_path_planning.launch  pionner.launch  retour_autonome.launch
path_planning_map/src/: Dijsktra.cpp  Divide.cpp  Subcell.cpp  getPosition_server.cpp  launch_Dijstra_callback.cpp  launch_path_planning.cpp  map_process.cpp  occupancy_grid_loader.cpp  offline.cpp  test_offline.cpp
path_planning_map/srv/: getUnicyclePos.srv
path_tracking/: CMakeLists.txt  package.xml
path_tracking/src/: current_traj.cpp  exploration_autonome.cpp  read_traj.cpp  read_traj_with_callback.cpp
